# verifiers

./: countdown.md
environments/countdown_numbers/: README.md  countdown_numbers.py  pyproject.toml
hitori/: .gitignore  README.md  dataset.py  download_model.py  eval_hitori.py  generator.py  requirements.txt  run_training.sh  solver.py  test_installation.py  test_models.py  test_rollout.py  train_hitori_grpo.py
hitori/configs/: deepspeed_zero3.yaml  hitori_grpo.yaml
hitori/data/hitoridata/: dataset_dict.json  eval_easy.json  eval_hard.json  eval_medium.json  eval_mixed.json
hitori/data/hitoridata/eval_easy/: data-00000-of-00001.arrow  state.json
hitori/data/hitoridata/eval_hard/: data-00000-of-00001.arrow  state.json
hitori/data/hitoridata/eval_medium/: data-00000-of-00001.arrow  state.json
hitori/data/hitoridata/eval_mixed/: data-00000-of-00001.arrow  state.json
hitori/data/hitoridata/train/: dataset_info.json  state.json
